--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,18 @@
 			<version>2.1.0</version>
 		</dependency>
 
+				<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.5.5.Final</version> <!-- Usa la versión más reciente compatible -->
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.5.5.Final</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 
 	</dependencies>
