test connect BD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=demo
+
+
+spring.data.mongodb.uri=mongodb+srv://janarvaez11:arqui12345@banquitocorecuentas.hxonq2f.mongodb.net/?retryWrites=true&w=majority&appName=BanquitoCoreCuentas
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+# Puerto de la aplicación
+server.port=8080
